Fixed: [EEZ Flow] Property description in user defined actions not readable in dark theme when property not set. #594

--- a/packages/eez-studio-ui/_stylesheets/project-editor.less
+++ b/packages/eez-studio-ui/_stylesheets/project-editor.less
@@ -3082,6 +3082,10 @@
                 &.inError {
                     color: @inErrorTextColor;
                     background-color: @inErrorBackgroundColor;
+
+                    .form-text {
+                        color: @inErrorTextColor;
+                    }
                 }
 
                 &.highlighted {
